add printing to achatfacture